# RAG

./: .dockerignore  .env  .gitignore  Dockerfile  README_SETUP.md  custom_types.py  data_loader.py  docker-compose.yml  main.py  openapi.json  pyproject.toml  requirements.txt  vecto_db.py
qdrant_storage/: raft_state.json
scripts/: ingest_local.py  setup_venv.sh
